v 1.28.4
+ fixed bug in primes() routine
+ smallmpqs now prints its factors to the logfile like it should
+ 8x med prime trial division now enabled for all versions

v 1.28.3
+ robustified nfs data file parsing a bit
+ fixed a couple issues with yafu running in the interactive 
	environment (thanks kar_bon!)
+ a couple more smallmpqs improvements
+ more ASM code in SIQS trial division - checking primes between 8 and 13 bits 
	8 at a time using SSE2 (not enabled in 64k versions)

v 1.28.2
+ fixed a bug in Win32 builds that crippled the speed of double large prime
	siqs factorizations
+ running single threaded now imposes the B1 limit on using external ECM 
	executables
+ implemented a bit scanning technique to enhance the sse2 sieve scanning already
	present in smallmpqs and siqs.  significant speedup to smallmpqs, almost
	unnoticable to siqs.
+ fixed a bug in Win32 builds: trial division in verbose mode used the wrong output
	display type

v 1.28.1
+ fixed a bug in multi-threaded external ecm

v 1.28
+ fixed a bug in LEGCD that called spDivide when v == 1, causing a crash
+ tweaked poly_a generation to allow siqs to work on much smaller inputs 
+ modified siqs to use smallmpqs (instead of mpqs) below a threshold, and lowered 
	the threshold to take advantage of new parameters for small siqs jobs.
+ fixed a bug in nextprime that caused some small primes to be identifed as not prime
+ smallmpqs called standalone now returns factors and residue
+ smallmpqs now uses gmp throughout (for a large speedup)
+ parameter adjustments to smallmpqs resulting in a small speedup
+ fixed a bug in the SoE to allocate memory better
+ double large prime cutoffs changed to uint64s, simplifying the code and providing
	a small speedup for larger jobs
+ better polynomial root update and bucket sieving assembler code, providing a
	small speedup
+ fixed a couple more bugs in prime counting and printing (thanks again to Alex
	Balfour and his Calendar Magic beta testers!)